--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,5 +5,6 @@
   <app-experience></app-experience>
   <app-projects></app-projects>
   <app-skills></app-skills>
+  <app-contact></app-contact>
 </main>
 <app-footer></app-footer>
