--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -1,9 +1,10 @@
 <footer class="footer">
   <div class="content">
     <span>© {{ currentYear }} Ayush Soam</span>
-    <span>•</span>
-    <a href="https://github.com/HriGrit" target="_blank" rel="noopener">GitHub</a>
-    <span>•</span>
-    <a href="https://www.linkedin.com/in/ayush-soam/" target="_blank" rel="noopener">LinkedIn</a>
+    <div class="footer-link">
+      <a href="https://github.com/HriGrit" target="_blank" rel="noopener">GitHub</a>
+      <span>•</span>
+      <a href="https://www.linkedin.com/in/ayush-soam/" target="_blank" rel="noopener">LinkedIn</a>
+    </div>
   </div>
 </footer>
