--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -7,5 +7,6 @@
       <a href="#projects">Projects</a>
       <a href="#skills">Skills</a>
     </div>
+    <a href="#contact"><app-button variant="primary">Contact Me</app-button></a>
   </nav>
 </header>
